--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,9 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.main {
+  margin            : 0 auto;
+  width             : 50%;
+  background-color  : #173f5f;
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow   : 10px 10px 5px 0px rgba(0,0,0,0.75);
+  box-shadow        : 10px 10px 5px 0px rgba(0,0,0,0.75);
+  padding           : 5px;
 }
