--- a/src/index.css
+++ b/src/index.css
@@ -10,14 +10,19 @@ body {
   -moz-box-shadow   : 10px 10px 5px -200px rgba(0,0,0,0.75);
   box-shadow        : 10px 10px 5px -200px rgba(0,0,0,0.75);
   padding           : 5px;
+  display           : flex;
 }
 
 .left-tweetContents {
-  border: 1px solid #000000;
+  border   : 1px solid #000000;
+  flex-grow: 1;
 }
 
 .right-tweetContents {
-  border: 1px solid #000000;
+  border        : 1px solid #000000;
+  flex-grow     : 2;
+  display       : flex;
+  flex-direction: column;
 }
 
 .right-top-tweetContents {
