--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,10 @@ body {
 }
 
 .right-top-tweetContents {
-  border: 1px solid #000000;
+  border         : 1px solid #000000;
+  display        : flex;
+  justify-content: space-between;
+  padding        : 0 10px 0 10px;
 }
 
 .right-middle-tweetContents {
