--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,23 @@
-body {
-  background-color: #173f5f;
-}
-
 .main {
-  margin            : 0 auto;
-  width             : 50%;
-  background-color  : white;
-  -webkit-box-shadow: 10px 10px 5px -200px rgba(0,0,0,0.75);
-  -moz-box-shadow   : 10px 10px 5px -200px rgba(0,0,0,0.75);
-  box-shadow        : 10px 10px 5px -200px rgba(0,0,0,0.75);
-  padding           : 5px;
-  display           : flex;
+  margin          : 0 auto;
+  width           : 50%;
+  background-color: #232c3d;
+  padding         : 5px;
+  display         : flex;
+  color           : white;
 }
 
 .left-tweetContents {
-  border   : 1px solid #000000;
   flex-grow: 1;
 }
 
 .right-tweetContents {
-  border        : 1px solid #000000;
   flex-grow     : 2;
   display       : flex;
   flex-direction: column;
 }
 
 .right-top-tweetContents {
-  border         : 1px solid #000000;
   display        : flex;
   justify-content: space-between;
   padding        : 0 10px 0 10px;
@@ -34,12 +25,10 @@ body {
 }
 
 .right-middle-tweetContents {
-  border   : 1px solid #000000;
   flex-grow: 2;
 }
 
 .right-bottom-tweetContents {
-  border         : 1px solid #000000;
   flex-grow      : 1;
   display        : flex;
   justify-content: space-between;
@@ -49,8 +38,9 @@ body {
 .tweet-interact-btn {
   outline         : none;
   border          : 0;
-  background-color: white;
+  background-color: #232c3d;
   cursor          : pointer;
+  color           : gray;
 }
 
 .tweet-message {
@@ -63,4 +53,8 @@ body {
 
 .tweet-avatar {
   border-radius: 50%;
+}
+
+.tweet-name p, .tweet-time p {
+  color: gray;
 }
