--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,14 @@
   border-radius: 50%;
 }
 
-.tweet-name p, .tweet-time p {
-  color: gray;
+.name {
+  font-weight  : "bold";
+  color        : "white";
+  margin-bottom: 0.5em;
+  margin-right : 0.3em;
+}
+
+.handle {
+  color    : gray;
+  font-size: 13px;
 }
